css/style.css
:root {
	--color-bar: #eaeaea;
	--color-notification-bar: #8edafc;
	--color-sent: #d5f9ba;
	--color-received: #ffffff;
	--color-write-bar: #f3eeea;
	--color-icon: #b1b1b1;
	--color-icon-2: #96a8b8;
    --color-active-chat: #e9ebeb;
}

.debug{
    border: 2px solid red;
}

/* General */

body{
    background-color: white;
}

#app{
    background: linear-gradient(180deg, #009688 20%, #D8D8D5 20%);
    padding: 30px 0;
    height: 100vh;
}

.db-container{
    width: 80%;
    height: 100%;
    background-color: white;
}

img{
    width: 50px;
}

/* i{
    margin: 0 10px;
} */

.contact-bar{
    background-color: var(--color-bar);
    height: 70px;
}

.contact-bar i{
    color: var(--color-icon);
    margin: 0 0.4rem;
}

/* LEFT side */
.left{
    width: 35%;
}

#contact-list .contact-bar{
    border-right: 1px solid var(--color-icon-2);
}

/* Notification bar */
#notification-bar{
    background-color: var(--color-notification-bar);
    height: 50px;
}

#notification-bar div div{
    font-size: 12px;
    margin-bottom: -10px;
}

#notification-bar div a{
    font-size: 10px;
    color: gray;
    margin-top: -10px;
}

#notification-bar span{
    background-color: white;
    padding: 5px;
    width: 30px;
    aspect-ratio: 1 / 1;
    border-radius: 50%;
    position: relative;
}

#notification-bar span i{
    color: var(--color-notification-bar);
    font-size: 14px;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

/* Search bar */
#searchbar{
    background-color: var(--color-bar);
    height: 40px;
    padding: 0 10px;
}

#searchbar .input-group-text,#searchbar input {
    height: 25px;
}

#searchbar .input-group input::placeholder {
    font-size: 10px; /* Imposta la dimensione del font del placeholder */
}

/* Open Chats */
#open-chats{
    overflow-y: scroll;
    height: calc(100% - 160px);
    background-color: #F1F1F1;
}

.contact{
    background-color: white;
}

.active-contact{
    background-color: var(--color-active-chat);
}

.chat-name{
    font-size: 14px;
}

.msg-info{
    font-size: 10px;
    color: rgb(185, 185, 185);
    display: flex;
}

.fa-solid.fa-check{
    color: rgb(0, 140, 255);
}

.check-read{
    position: absolute;
    left: 4px

}

/* RIGHT side */

.right{
    width: 65%;
}

.last-viewed{
    color: var(--color-icon-2);
    font-size: 12px;
}

/* chat section*/
#chat{
    overflow-y: scroll;
    height: calc(100% - 130px);
    padding: 20px 50px;
    background-image: url(../img/mine.jpg);
    position: relative;
}

.msg{
    width: 40%;
    padding: 5px 10px;
    border-radius: 7px;
    font-size: 14px;
    margin-top: 10px;
}

.sent{
    background-color: var(--color-sent);
    align-self: flex-end;
}

.received{
    background-color: white;
}

#msg-time{
    font-size: 8px;
    color: var(--color-icon-2);
}

.dropdown{
    display: none;
}

.msg:hover .dropdown{
    display: inline-block;
}

.dropdown .dropdown-toggle{
    border: 0;
    background-color: transparent;
}

.no-msg{
    background-image: url(/img/cloud.png);
    background-size: cover;
    width: 40%;
    aspect-ratio: 1 / 1;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%,-50%);
}

.no-msg span{
    width: 80%;
    position: absolute;
    top: 60%;
    left: 50%;
    transform: translate(-50%,-50%);
}

/* Sender bar */
#sender-bar{
    background-color: #F1F1F1;
    height: 60px;
}

#sender-bar span{
   width: 10%;
   color: var(--color-icon-2);
}

#sender-bar input{
    width: 80%;
    padding: 0.7rem 0.4rem;
    font-size: 10px;
}

#sender-bar i:hover{
    cursor: pointer;
}

